--- a/EmployeeTracker.UI/package.json
+++ b/EmployeeTracker.UI/package.json
@@ -27,7 +27,7 @@
 
     "angular-in-memory-web-api": "~0.2.4",
     "angular2-datatable": "^0.6.0",
-    "ng4-datepicker": "^1.0.12",
+    "ngx-mydatepicker": "^2.4.5",
 
     "systemjs": "0.19.40",
     "core-js": "^2.4.1",
@@ -59,7 +59,7 @@
     "ng2-bs3-modal": "0.10.4",
     "@angular/material": "2.0.0-beta.6",
     "@angular/animations": "^4.0.0"
-   
+
   },
   "repository": {}
 }
